--- a/src/views/pages/people/people-data.njk
+++ b/src/views/pages/people/people-data.njk
@@ -51,7 +51,7 @@
 
 {% set kaige = {
     name: "Kaige Zhang",
-    subtitle: "Ph.D. Research Assistant | CS",
+    subtitle: "PhD Research Assistant | CS",
     modifier: "Zhang",
     type: "Alumni",
     bio: "Kaige Zhang is a research associate at The Center for Integrated BioSystems. He received his
@@ -147,7 +147,7 @@
 
 {% set austin = {
     name: "Austin Swainston",
-    subtitle: "HPC Administrator | Technology Systems",
+    subtitle: "HPC Administrator | BS Technology Systems",
     modifier: "Austin",
     type: "Alumni",
     bio: "Austin is a systems administrator of the high performance cluster for the bioinformatics group. He enjoys anything IT especially Linux. Here to assist with any technology needs at the lab. He recently graduated at USU with a BS in Technology Systems and works full-time at the Space Dynamics Laboratory.",
