--- a/src/views/pages/people/people-data.njk
+++ b/src/views/pages/people/people-data.njk
@@ -150,7 +150,7 @@
     subtitle: "HPC Administrator | BS Technology Systems",
     modifier: "Austin",
     type: "Alumni",
-    bio: "Austin is a systems administrator of the high performance cluster for the bioinformatics group. He enjoys anything IT especially Linux. Here to assist with any technology needs at the lab. He recently graduated at USU with a BS in Technology Systems and works full-time at the Space Dynamics Laboratory.",
+    bio: "Austin is a systems administrator of the high performance cluster for the bioinformatics group. He enjoys anything IT especially Linux. Here to assist with any technology needs at the lab. He recently graduated at USU with a BS in Technology Systems.
     email: "austin.swainston@usu.edu",
     img: "/image/raw/bioinfo/profile/austins.jpg?h=600&w=500",
     social: [
