fixing people page

--- a/src/scss/_colors.scss
+++ b/src/scss/_colors.scss
@@ -43,11 +43,11 @@ $color-secondary: #3b4961;
   --color-bg-main: #f7f7f7;
 
   --transparent: rgba(#fff, 0);
-  --color-text-hard: #212121;
-  --color-text-main: #2a2a2a;
-  --color-text-soft: #606060;
+  --color-text-hard: #0d0d0d;
+  --color-text-main: #212121;
+  --color-text-soft: #2a2a2a;
   // --color-text-ghost: #FF0000;
-  --color-text-ghost: #a2a2a2;
+  --color-text-ghost: #555753;
 
   --color-btn-gray: #c4c4c4;
 }
