--- a/src/views/components/publication.njk
+++ b/src/views/components/publication.njk
@@ -15,7 +15,7 @@
     <section class="col-3">
       <span class="kbl-text">
         {% if article.doiTitle.length %}
-          <a class="kbl-link" target="_blank" href="{{ article.doiLink }}">
+          <a class="kbl-link" target="_blank" href="{{ article.doiLink }}" aria-label="{{ article.doiTitle }}">
             {{ article.doiTitle }}<sup> <i class="fas fa-external-link-alt"></i></sup>
           </a>
         {% endif %}
@@ -25,7 +25,7 @@
 
   <article class="row justify-content-center py-4 d-lg-none">
     <div class="col-11 col-sm-8">
-      <a class="d-block" href="{{ article.doiLink }}" target="_blank" rel="noreferrer noopener">
+      <a class="d-block" href="{{ article.doiLink }}" target="_blank" rel="noreferrer noopener" aria-label="{{ article.doiTitle }}">
         <div class="row justify-content-center publication-mob kbl-card">
 
           <section class="col px-3 py-1">
@@ -42,7 +42,7 @@
 
 {% macro publicationMobile(article) %}
 <article class="row py-2">
-  <a class="d-block" href="{{ article.doiLink }}">
+  <a class="d-block" href="{{ article.doiLink }}" aria-label="{{ article.doiTitle }}">
     <div class="publication-mob card">
       <section class="col-3">
         <p class="authors">
@@ -59,7 +59,7 @@
       <section class="col-3">
         <span class="kbl-text">
           {% if article.doiTitle.length %}
-            <a class="kbl-link" target="_blank" href="{{ article.doiLink }}">
+            <a class="kbl-link" target="_blank" href="{{ article.doiLink }}" >
               {{ article.doiTitle }}<sup> <i class="fas fa-external-link-alt"></i></sup>
             </a>
           {% endif %}
