Updating some colors

--- a/src/views/pages/tools/tools.njk
+++ b/src/views/pages/tools/tools.njk
@@ -25,13 +25,13 @@
 <div class="col-12 mb-4" style="margin:auto">
 	<a href="tools#hpi" class="btn btn-md btn-block btn-outline-primary  my-1">Host-Pathogen Interactions</a>
 	<a href="tools#cellularloc" class="btn btn-md btn-block btn-outline-danger  my-1">Subcellular Localization Prediction</a>
-  <a href="tools#db" class="btn btn-md btn-block btn-outline-info my-1">Databases</a>
-	<a href="tools#metagenomics" class="btn btn-md btn-block btn-outline-success my-1 ">Metagenomics</a>
-  <a href="tools#ngsPack" class="btn btn-md btn-block btn-outline-warning my-1">NGS Packages</a>
-  <a href="tools#rgenes" class="btn btn-md btn-block btn-outline-warning my-1">Functional Annotation</a>
-  <a href="tools#descriptors" class="btn btn-md btn-block btn-outline-info my-1">Descriptors</a>
-	<a href="tools#bionrg" class="btn btn-md btn-block btn-outline-secondary my-1 ">Bioenergy</a>
-	<a href="tools#disease" class="btn btn-md btn-block btn-outline-dark my-1">Disease Forecasting</a>
+  <a href="tools#db" class="btn btn-md btn-block btn-outline-success my-1">Databases</a>
+	<a href="tools#metagenomics" class="btn btn-md btn-block btn-outline-secondary my-1 ">Metagenomics</a>
+  <a href="tools#ngsPack" class="btn btn-md btn-block btn-outline-dark my-1">NGS Packages</a>
+  <a href="tools#rgenes" class="btn btn-md btn-block btn-outline-primary my-1">Functional Annotation</a>
+  <a href="tools#descriptors" class="btn btn-md btn-block btn-outline-danger my-1">Descriptors</a>
+	<a href="tools#bionrg" class="btn btn-md btn-block btn-outline-success my-1 ">Bioenergy</a>
+	<a href="tools#disease" class="btn btn-md btn-block btn-outline-secondary my-1">Disease Forecasting</a>
 </div>
 </div>
 </article>
