--- a/src/views/pages/contact/_contact-form.njk
+++ b/src/views/pages/contact/_contact-form.njk
@@ -1,6 +1,10 @@
+<label for="formName" hidden="hidden">Full Name</label>
 <input name="name" id="formName" type="text" class="form-control kbl-form" placeholder="Full Name">
+<label for="formEmail" hidden="hidden">Email</label>
 <input name="email"  id="formEmail" type="email" class="form-control kbl-form" placeholder="Email">
+<label for="formPhone" hidden="hidden">Phone Number</label>
 <input  name="phone" id="formPhone" class="form-control kbl-form"  placeholder="Phone Number">
+<label for="formMessage" hidden="hidden">Message</label>
 <textarea name="message"  id="formMessage" class="form-control kbl-form" rows="15" placeholder="Say something to us!"></textarea>
 
 <button class="btn kbl-btn-1-solid" id="send">Send Message</button>
