updated publications pages and added articles

--- a/src/views/pages/publications/_data.njk
+++ b/src/views/pages/publications/_data.njk
@@ -1,4 +1,64 @@
+{% set pub2025 = [
+    {
+    authors:'Naveen Duhan, Rakesh Kaundal',
+    content:'RSLpred2: An Integrated Web Server for the Annotation of Rice Proteome Subcellular Localization Using Deep Learning',
+    doiLink:'https://doi.org/10.1186/s12284-025-00767-7',
+    doiTitle:'https://doi.org/10.1186/s12284-025-00767-7',
+    year:'2025'
+    },
+    {
+    authors:'Naveen Duhan, Rakesh Kaundal',
+    content:'PRGminer: harnessing deep learning for the prediction of resistance genes involved in plant defense mechanisms',
+    doiLink:'https://doi.org/10.3389/fpls.2025.1411525',
+    doiTitle:'https://doi.org/10.3389/fpls.2025.1411525',
+    year:'2025'
+    },
+    {
+    authors:'Rakesh Kaundal',
+    content:'Harnessing OMICS Technologies and Bioinformatics to Decipher Host-Pathogen Interactions',
+    doiLink:'',
+    doiTitle:'',
+    year:'2025'
+    },
+    {
+    authors:'Naveen Duhan, Rakesh Kaundal',
+    content:'AtSubP‐2.0: An integrated web server for the annotation of Arabidopsis proteome subcellular localization using deep learning',
+    doiLink:'https://doi.org/10.1002/tpg2.20536',
+    doiTitle:'https://doi.org/10.1002/tpg2.20536',
+    year:'2025'
+    },
+    {
+    authors:'John D Morrey, Venkatraman Siddharthan, Hong Wang, Alexandre LR Oliveira, Keiichiro Susuki, Rakesh Kaundal, Sara M Freeman, Aaron J Thomas, Naveen Duhan, Nathan G Corry',
+    content:'Identification of candidate genes involved in Zika virus-induced reversible paralysis of mice',
+    doiLink:'https://doi.org/10.1038/s41598-025-86475-0',
+    doiTitle:'https://doi.org/10.1038/s41598-025-86475-0',
+    year:'2025'
+    }
+] 
+%}
+
 {% set pub2024 = [
+    {
+    authors:'Simardeep Kaur, Karishma Seem, DWIJESH CHANDRA MISHRA, Rakesh Kaundal, Suresh Kumar, Trilochan Mohapatra',
+    content:'Transcription factor-mediated gene regulatory networks contributes to reproductive stage drought tolerance in rice (Oryza sativa)',
+    doiLink:'https://doi.org/10.56093/ijas.v94i9.144862',
+    doiTitle:'https://doi.org/10.56093/ijas.v94i9.144862',
+    year:'2024'
+    },
+    {
+    authors:'Raghav Kataria, Naveen Duhan, Rakesh Kaundal',
+    content:'Navigating the human-monkeypox virus interactome: HuPoxNET atlas reveals functional insights',
+    doiLink:'https://doi.org/10.3389/fmicb.2024.1399555',
+    doiTitle:'https://doi.org/10.3389/fmicb.2024.1399555',
+    year:'2024'
+    },
+    {
+    authors:'David Guevara-Barrientos, Rakesh Kaundal',
+    content:'Malivhu: A Comprehensive Bioinformatics Resource for Filtering SARS and MERS Virus Proteins by Their Classification, Family and Species, and Prediction of Their Interactions Against Human Proteins',
+    doiLink:'https://doi.org/10.1177/11779322241263671',
+    doiTitle:'https://doi.org/10.1177/11779322241263671',
+    year:'2024'
+    },
     {
     authors:'Simardeep Kaur, Karishma Seem, Naveen Duhan, Suresh Kumar, Rakesh Kaundal, Trilochan Mohapatra',
     content:'Comparative miRNome and transcriptome analyses reveal the expression of novel miRNAs in the panicle of rice implicated in sustained agronomic performance under terminal drought stress',
