--- a/src/views/pages/publications/subpages/dates/23-25.njk
+++ b/src/views/pages/publications/subpages/dates/23-25.njk
@@ -1,3 +1,22 @@
+{% set pub2025 = [
+  {
+    authors:'',
+    location:'',
+    desc:'',
+    date:'2025',
+    type:''
+  }
+] %}
+
+{% set pub2024 = [
+  {
+    authors:'',
+    location:'',
+    desc:'',
+    date:'2024',
+    type:''
+  }
+] %}
 {% set pub2023 = [
   {
     authors:'',
