--- a/src/views/pages/publications/subpages/pubs.njk
+++ b/src/views/pages/publications/subpages/pubs.njk
@@ -1,5 +1,5 @@
 <div class="row justify-content-center">
-  {{ pubSelector("2023-2024") }}
+  {{ pubSelector("2023-2025") }}
   {{ pubSelector("2020-2022") }}
   {{ pubSelector("2017-2019") }}
   {{ pubSelector("2014-2016") }}
@@ -7,6 +7,19 @@
   {{ pubSelector("2008-2010") }}
   {{ pubSelector("2005-2007") }}
 </div>
+
+<article class="pub-group" id="pub-2025">
+  <section class="py-4">
+    <div class="kbl-header-bar py-2 text-center mb-2">
+      <h4 class="kbl-heading my-auto">2025</h4>
+    </div>
+    <div class="pub-container">
+      {% for article in pub2025 %}
+        {{ publication(article) }}
+      {% endfor %}
+    </div>
+  </section>
+</article>
 
 <article class="pub-group" id="pub-2024">
   <section class="py-4">
