added and updated links

--- a/src/views/pages/people/_new-rakesh.njk
+++ b/src/views/pages/people/_new-rakesh.njk
@@ -41,18 +41,23 @@
   <div class="col-11 col-md-9">
     <section class="mb-5">
       <h2 class="rakesh-header">Dr. Rakesh Kaundal</h2>
-      <h5 class="workplace-header"><a href="https://psc.usu.edu/" class="kbl-link">Department of Plants, Soils and Climate</a></h5>
-      <p class="workplace-desc"> &nbsp;&nbsp;&nbsp;&nbsp; Associate Professor, Bioinformatics</p>
-
+      <h5 class="workplace-header"><a href="https://qanr.usu.edu/psc/" class="kbl-link">Department of Plants, Soils and Climate</a></h5>
+      <h6 class="workplace-header">(College of Agriculture and Natural Resources)</h6>
+      <p class="workplace-desc"> &nbsp;&nbsp;&nbsp;&nbsp; <a href="https://qanr.usu.edu/directory/kaundal-rakesh" class="kbl-link" target="_blank" rel="noopener noreferrer">
+    Associate Professor, Bioinformatics</a>
+      </p>
       <h5 class="workplace-header">
-        <a href="https://biosystems.usu.edu/" class="kbl-link">Center for Integrated BioSystems</a>
+        <a href="https://qanr.usu.edu/biosystems/" class="kbl-link">Center for Integrated BioSystems</a>
       </h5>
-      <h6 class="workplace-header">(College of Agriculture and Applied Sciences)</h6>
-      <p class="workplace-desc"> &nbsp;&nbsp;&nbsp;&nbsp; Director, Bioinformatics Facility</p>
-
-      <h5 class="workplace-header"><a href="https://cs.usu.edu/" class="kbl-link">Department of Computer Science</a></h5>
-      <h6 class="workplace-header">(College of Science)</h6>
-      <p class="workplace-desc"> &nbsp;&nbsp;&nbsp;&nbsp; Adjunct Associate Professor</p>
+      <h6 class="workplace-header">(College of Agriculture and Natural Resources)</h6>
+      <p class="workplace-desc"> &nbsp;&nbsp;&nbsp;&nbsp; <a href="https://qanr.usu.edu/directory/kaundal-rakesh" class="kbl-link" target="_blank" rel="noopener noreferrer">
+    Director, Bioinformatics Facility</a>
+      </p>
+      <h5 class="workplace-header"><a href="https://engineering.usu.edu/cs/" class="kbl-link">Department of Computer Science</a></h5>
+      <h6 class="workplace-header">(College of Engineering)</h6>
+      <p class="workplace-desc"> &nbsp;&nbsp;&nbsp;&nbsp; <a href="https://engineering.usu.edu/cs/directory/adjunct-faculty/kaundal-rakesh" class="kbl-link" target="_blank" rel="noopener noreferrer">
+    Adjunct Associate Professor</a>
+     </p>
     </section>
 
     <section class="mt-5">
