--- a/src/views/universal/_footer.njk
+++ b/src/views/universal/_footer.njk
@@ -50,9 +50,8 @@
         <h5 class="text-uppercase small mb-3">Affiliations</h5>
         <ul class="list-unstyled small">
           <li><strong>College of Agriculture & Natural Resources</strong></li>
-          <li><a href="https://agnr.usu.edu/psc/" target="_blank" rel="noopener noreferrer" class="footer-link">Plants, Soils & Climate</a></li>
-          <li><a href="https://agnr.usu.edu/biosystems/" target="_blank" rel="noopener noreferrer" class="footer-link">CIB</a></li>
-          <li><a href="https://agnr.usu.edu/" target="_blank" rel="noopener noreferrer" class="footer-link">AGNR Homepage</a></li>
+          <li><a href="https://qanr.usu.edu/psc/" target="_blank" rel="noopener noreferrer" class="footer-link">Plants, Soils & Climate</a></li>
+          <li><a href="https://qanr.usu.edu/biosystems/" target="_blank" rel="noopener noreferrer" class="footer-link">Center for Integrated Biosystems</a></li>
           <li class="mt-2"><strong>College of Engineering</strong></li>
           <li><a href="https://engineering.usu.edu/cs/" target="_blank" rel="noopener noreferrer" class="footer-link">Computer Science</a></li>
         </ul>
